--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
       "typeorm": "0.2.44"
    },
    "scripts": {
-      "start": "ts-node src/index.ts node .",
+      "start": "node index.ts ts-node src/index.ts",
       "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js",
       "dev": "nodemon index.ts"
    }
